# computer-shader-showcase

./: CMakeLists.txt  README.md  main.cpp  opengl_stuff.h  shader_loading.h
macos-metal-verirrungen/: Package.swift  README.md  Shaders.metal  main.swift  run.sh
macos-metal-verirrungen/Sources/: main.swift
metal_swift/: README.md  run.sh
metal_swift/Shaders/: Compute.metal  Render.metal
metal_swift/Sources/: main.swift
opengl_cpp/: README.md  main.cpp  opengl_loader.h  shader_loading.h
opengl_cpp/shaders/: compute.glsl  fragment.glsl
opengl_cpp_advanced/: CMakeLists.txt  README.md  compile_shaders.cpp  embed_shaders.cmake  main.cpp  opengl_loader.h  shader_reading.cpp  shader_reading.h
opengl_cpp_advanced/shaders/: compute.glsl  fragment.glsl
shaders/: compute.glsl  fragment.glsl  vertex.glsl
